Bumped to spring boot 3.0 and java 19